--- a/index.css
+++ b/index.css
@@ -136,14 +136,14 @@ input {
   padding: 0.5em;
   margin-top: 0.5em;
 }
-@media (max-width: 768) {
-  .item-tile {
-    width: 100%;
+@media screen and (max-width: 768px) {
+  .item-img {
+    flex: 100%;
   }
 }
 
-@media screen and (min-width: 769px) {
-  .item-tile {
-    width: 30%;
+@media screen and(min-width: 768px) and (max-width: 1200px) {
+  .item-img {
+    flex: 33.33%;
   }
 }
